--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "^53.0.22",
+    "expo-av": "~15.1.7",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.1.11",
     "expo-image-picker": "^16.1.4",
@@ -22,10 +23,11 @@
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-maps": "1.20.1",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-maps": "1.20.1",
-    "expo-av": "~15.1.7",
+    "react-native-svg": "15.11.2",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
